Added repo to package.json

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "webby",
   "version": "1.0.0",
-  "description": "",
+  "description": "A basic Webpack, EJS, and Bootstrap (CSS) boilerplate",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": "https://github.com/jereddanielson/webby",
   "author": "",
   "license": "MIT",
   "devDependencies": {
